[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/fonts/Consolas.tres" type="DynamicFont" id=1]
[ext_resource path="res://content/gui/menus/ConfigMenu.gd" type="Script" id=2]

[node name="ConfigMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_left = -384.0
margin_top = -682.5
margin_right = 384.0
margin_bottom = 682.5
mouse_filter = 2
color = Color( 0.257813, 0.257813, 0.257813, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Background"]
margin_right = 768.0
margin_bottom = 1365.0
mouse_filter = 2
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 748.0
margin_bottom = 1345.0
custom_constants/separation = 150
alignment = 1

[node name="AddressVBoxContainer" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer"]
margin_top = 242.0
margin_right = 728.0
margin_bottom = 344.0

[node name="AddressLabel" type="Label" parent="Background/MarginContainer/VBoxContainer/AddressVBoxContainer"]
margin_right = 728.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 1 )
text = "Server-Adresse:"

[node name="AddressLineEdit" type="LineEdit" parent="Background/MarginContainer/VBoxContainer/AddressVBoxContainer"]
margin_top = 38.0
margin_right = 728.0
margin_bottom = 102.0
rect_min_size = Vector2( 0, 64 )
custom_fonts/font = ExtResource( 1 )
text = "0.0.0.0"
align = 1

[node name="PortVBoxContainer" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer"]
margin_top = 494.0
margin_right = 728.0
margin_bottom = 576.0

[node name="PortLabel" type="Label" parent="Background/MarginContainer/VBoxContainer/PortVBoxContainer"]
margin_right = 728.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 1 )
text = "Server-Port:"

[node name="PortLineEdit" type="LineEdit" parent="Background/MarginContainer/VBoxContainer/PortVBoxContainer"]
margin_top = 38.0
margin_right = 728.0
margin_bottom = 102.0
custom_fonts/font = ExtResource( 1 )
text = "80"
align = 1

[node name="AngleVBoxContainer" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer"]
margin_top = 726.0
margin_right = 728.0
margin_bottom = 804.0

[node name="AngleLabel" type="Label" parent="Background/MarginContainer/VBoxContainer/AngleVBoxContainer"]
margin_right = 728.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 1 )
text = "Bildrotationswinkel:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AngleOptionButton" type="OptionButton" parent="Background/MarginContainer/VBoxContainer/AngleVBoxContainer"]
margin_top = 38.0
margin_right = 728.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 1 )
toggle_mode = false
text = "0"
align = 1
items = [ "0", null, false, 0, null, "90", null, false, 1, null, "180", null, false, 2, null, "270", null, false, 3, null ]
selected = 0

[node name="ButtonsHBoxContainer" type="HBoxContainer" parent="Background/MarginContainer/VBoxContainer"]
margin_top = 954.0
margin_right = 728.0
margin_bottom = 1082.0

[node name="OkButton" type="Button" parent="Background/MarginContainer/VBoxContainer/ButtonsHBoxContainer"]
margin_right = 362.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Ok"

[node name="CancelButton" type="Button" parent="Background/MarginContainer/VBoxContainer/ButtonsHBoxContainer"]
margin_left = 366.0
margin_right = 728.0
margin_bottom = 128.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Abbrechen"

[connection signal="text_changed" from="Background/MarginContainer/VBoxContainer/PortVBoxContainer/PortLineEdit" to="." method="_on_PortLineEdit_text_changed"]
[connection signal="pressed" from="Background/MarginContainer/VBoxContainer/ButtonsHBoxContainer/OkButton" to="." method="_on_OkButton_pressed"]
[connection signal="pressed" from="Background/MarginContainer/VBoxContainer/ButtonsHBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
